tests/records/records.exp
Error ----------------------------------------------------------------------------------------------- declaration.js:8:5

Cannot get `x.xxx` because property `xxx` is missing in `R` [1]. [prop-missing]

   declaration.js:8:5
   8|   x.xxx; // ERROR: property not found
          ^^^

References:
   declaration.js:5:20
   5|   declare const x: R;
                         ^ [1]


Error ---------------------------------------------------------------------------------------------- declaration.js:20:3

Cannot cast `x.a` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   declaration.js:20:3
   20|   x.a as empty; // ERROR: `number`
         ^^^

References:
   declaration.js:14:8
   14|     a: number,
              ^^^^^^ [1]
   declaration.js:20:10
   20|   x.a as empty; // ERROR: `number`
                ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- declaration.js:36:5

Cannot get `x.xxx` because property `xxx` is missing in `R` [1]. [prop-missing]

   declaration.js:36:5
   36|   x.xxx; // ERROR: property not found
           ^^^

References:
   declaration.js:31:20
   31|   declare const x: R;
                          ^ [1]


Error ---------------------------------------------------------------------------------------------- declaration.js:47:5

Cannot assign `1` to `x.a` because property `a` is not writable. [cannot-write]

   47|   x.a = 1; // ERROR: not writable
           ^


Error --------------------------------------------------------------------------------------------- declaration.js:133:5

Cannot assign function to `R.random` because property `random` is not writable. [cannot-write]

   133|   R.random = () => x; // ERROR: method not writable
            ^^^^^^


Error --------------------------------------------------------------------------------------------- declaration.js:143:3

Cannot cast `R.zero` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   declaration.js:143:3
   143|   R.zero as empty; // ERROR: `number`
          ^^^^^^

References:
   declaration.js:139:18
   139|     static zero: number = 0,
                         ^^^^^^ [1]
   declaration.js:143:13
   143|   R.zero as empty; // ERROR: `number`
                    ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:144:5

Cannot assign `1` to `R.zero` because property `zero` is not writable. [cannot-write]

   144|   R.zero = 1; // ERROR: static not writable
            ^^^^


Error --------------------------------------------------------------------------------------------- declaration.js:171:7

Cannot compare `x` [1] to number literal `1` [2], because `R` [3] is not a subtype of number literal `1` [2] and number
literal `1` [2] is not a subtype of `R` [3]. In **rare** cases, these types may have overlapping values but lack a
subtyping relationship. If that happens, you can cast one side to the union of both types to pass the flow check. 
[invalid-compare]

   declaration.js:171:7
   171|   if (x === 1) {} // ERROR
              ^^^^^^^

References:
   declaration.js:168:17
   168|   declare const x: R;
                        ^ [1]
   declaration.js:171:13
   171|   if (x === 1) {} // ERROR
                    ^ [2]
   declaration.js:168:20
   168|   declare const x: R;
                           ^ [3]


Error --------------------------------------------------------------------------------------------- declaration.js:201:3

Cannot cast `x` to `E` because property `xxx` is missing in `R` [1] but exists in `E` [2]. [incompatible-type]

   declaration.js:201:3
   201|   x as E; // ERROR
          ^

References:
   declaration.js:189:20
   189|   declare const x: R;
                           ^ [1]
   declaration.js:201:8
   201|   x as E; // ERROR
               ^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:212:3

Cannot cast `x` to object type because `R` [1] is not a subtype of object type [2]. Records are not subtypes of object
types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   declaration.js:212:3
   212|   x as {+a: number}; // ERROR
          ^

References:
   declaration.js:210:20
   210|   declare const x: R;
                           ^ [1]
   declaration.js:212:8
   212|   x as {+a: number}; // ERROR
               ^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:213:3

Cannot cast `x` to object type because `R` [1] is not a subtype of object type [2]. Records are not subtypes of object
types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   declaration.js:213:3
   213|   x as {+a: number, ...}; // ERROR
          ^

References:
   declaration.js:210:20
   210|   declare const x: R;
                           ^ [1]
   declaration.js:213:8
   213|   x as {+a: number, ...}; // ERROR
               ^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:309:3

Cannot reassign record binding `R` [1]. [cannot-reassign]

   declaration.js:309:3
   309|   R = null; // ERROR: cannot reassign
          ^

References:
   declaration.js:297:10
   297|   record R {
                 ^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:366:22

Cannot instantiate `R` because in type argument `T`: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with string [3].

   declaration.js:366:22
   366|   declare const z: R<boolean>; // ERROR
                             ^^^^^^^ [1]

References:
   declaration.js:360:15
   360|   record R<T: number | string> {
                      ^^^^^^ [2]
   declaration.js:360:24
   360|   record R<T: number | string> {
                               ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- declaration.js:396:9

Cannot extend `R` [1] with `C` because `R` [1] is not inheritable. [incompatible-use]

   declaration.js:396:9
   396|   class C extends R { // ERROR
                ^

References:
   declaration.js:396:19
   396|   class C extends R { // ERROR
                          ^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:399:22

Cannot implement `R` because it is not an interface. [cannot-implement]

   399|   class D implements R { // ERROR
                             ^


Error -------------------------------------------------------------------------------------------- declaration.js:411:29

Operation `$ReadOnly` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   declaration.js:411:29
   411|   type ReadonlyR = Readonly<R>; // ERROR
                                    ^ [2]

References:
   declaration.js:411:20
   411|   type ReadonlyR = Readonly<R>; // ERROR
                           ^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:412:27

Operation partial `R` [1] is not allowed on record `R` [1]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   412|   type PartialR = Partial<R>; // ERROR
                                  ^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:413:29

Operation required of `R` [1] is not allowed on record `R` [1]. To fix, turn the record type into an object type first
using `{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   413|   type RequiredR = Required<R>; // ERROR
                                    ^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:414:21

Operation `Pick` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   declaration.js:414:21
    414|   type PickR = Pick<R, 'a'>; // ERROR
                             ^ [2]

References:
   <BUILTINS>/core.js:3182:47
   3182| type Pick<O: interface {}, Keys: $Keys<O>> = {[key in Keys]: O[key]};
                                                       ^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:416:21

Operation `Omit` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   declaration.js:416:21
    416|   type OmitR = Omit<R, 'a'>; // ERROR
                             ^ [2]

References:
   <BUILTINS>/core.js:3187:46
   3187| type Omit<O: interface {}, Keys: $Keys<O>> = $Omit<O, Keys>;
                                                      ^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:418:24

Operation `$Exact` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   declaration.js:418:24
   418|   type ExactR = $Exact<R>; // ERROR
                               ^ [2]

References:
   declaration.js:418:17
   418|   type ExactR = $Exact<R>; // ERROR
                        ^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- declaration.js:421:7

Cannot call `fun` with `x` bound to `x` because `R` [1] is not a subtype of `Omit` [2]. Records are not subtypes of
object types; consider rewriting `Omit` [2] as an interface. [class-object-subtyping]

   declaration.js:421:7
   421|   fun(x); // ERROR
              ^

References:
   declaration.js:409:20
   409|   declare const x: R;
                           ^ [1]
   declaration.js:420:30
   420|   declare function fun<T>(x: Omit<T, 'a'>): T;
                                     ^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:435:4

Cannot cast object literal to `OmitObjR` because property `a` is extra in object literal [1] but missing in `Omit` [2].
Exact objects do not accept extra props. [incompatible-type]

   declaration.js:435:4
   435|   ({a: 1, b: 's'}) as OmitObjR; // ERROR: property `a` is extra
           ^^^^^^^^^^^^^^ [1]

References:
   declaration.js:435:23
   435|   ({a: 1, b: 's'}) as OmitObjR; // ERROR: property `a` is extra
                              ^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:467:9

Cannot call `R` with `oB` bound to `fields` because property `a` is missing in object literal [1] but exists in object
type [2]. [incompatible-type]

   declaration.js:467:9
   467|   new R(oB); // ERROR: missing `a`
                ^^

References:
   declaration.js:463:14
   463|   const oB = {b: 's'};
                     ^^^^^^^^ [1]
   declaration.js:457:12
                   v
   457|   record R {
   458|     a: number,
   459|     b: string,
   460|   }
          ^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:468:9

Cannot call `R` with `oEmpty` bound to `fields` because properties `a` and `b` are missing in object literal [1] but
exist in object type [2]. [incompatible-type]

   declaration.js:468:9
   468|   new R(oEmpty); // ERROR: missing `a` and `b`
                ^^^^^^

References:
   declaration.js:462:18
   462|   const oEmpty = {};
                         ^^ [1]
   declaration.js:457:12
                   v
   457|   record R {
   458|     a: number,
   459|     b: string,
   460|   }
          ^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:480:9

Cannot call `R` with `oExtra` bound to `fields` because property `xxx` is extra in object literal [1] but missing in
object type [2]. Exact objects do not accept extra props. [incompatible-type]

   declaration.js:480:9
   480|   new R(oExtra); // ERROR
                ^^^^^^

References:
   declaration.js:479:18
   479|   const oExtra = {a: 1, b: 's', xxx: false};
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   declaration.js:457:12
                   v
   457|   record R {
   458|     a: number,
   459|     b: string,
   460|   }
          ^ [2]


Error -------------------------------------------------------------------------------------------- declaration.js:481:12

Cannot call `ROpt` with `oExtra` bound to `fields` because property `xxx` is extra in object literal [1] but missing in
object type [2]. Exact objects do not accept extra props. [incompatible-type]

   declaration.js:481:12
   481|   new ROpt(oExtra); // ERROR
                   ^^^^^^

References:
   declaration.js:479:18
   479|   const oExtra = {a: 1, b: 's', xxx: false};
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   declaration.js:470:15
                      v
   470|   record ROpt {
   471|     a: number = 0,
   472|     b: string = '',
   473|   }
          ^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:488:5

`a` has already been declared in this record. Record property names must be unique. [duplicate-class-member]

   488|     a: number, // ERROR
            ^


Error -------------------------------------------------------------------------------------------- declaration.js:495:17

Cannot initialize property `a` with `true` because boolean [1] is incompatible with number [2]. [incompatible-type]

   declaration.js:495:17
   495|     a: number = true, // ERROR
                        ^^^^ [1]

References:
   declaration.js:495:8
   495|     a: number = true, // ERROR
               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- exported.js:5:34

Operation `$ReadOnly` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   exported.js:5:34
   5| export type ReadonlyR = Readonly<R>; // ERROR
                                       ^ [2]

References:
   exported.js:5:25
   5| export type ReadonlyR = Readonly<R>; // ERROR
                              ^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ expression.js:7:5

Cannot create record `R` because property `xxx` is extra in record [1] but missing in object type [2]. Exact objects do
not accept extra props. [incompatible-type]

   expression.js:7:5
   7|   R {xxx: 0}; // ERROR: extra field `xxx`
          ^^^^^^^^ [1]

References:
   expression.js:3:12
   3|   record R {}
                 ^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:33:15

Cannot create record `R` because in property `b`: null [1] is incompatible with boolean [2]. [incompatible-type]

   expression.js:33:15
   33|   R {a: 1, b: null}; // ERROR
                     ^^^^ [1]

References:
   expression.js:26:8
   26|     b: boolean = false,
              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:43:5

Cannot create record `R` because property `b` is missing in record [1] but exists in object type [2].
[incompatible-type]

   expression.js:43:5
   43|   R {a: 1}; // ERROR: missing `b`
           ^^^^^^ [1]

References:
   expression.js:38:12
                  v
   38|   record R {
   39|     a: number,
   40|     b: string,
   41|   }
         ^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:44:5

Cannot create record `R` because property `a` is missing in record [1] but exists in object type [2].
[incompatible-type]

   expression.js:44:5
   44|   R {b: 's'}; // ERROR: missing `a`
           ^^^^^^^^ [1]

References:
   expression.js:38:12
                  v
   38|   record R {
   39|     a: number,
   40|     b: string,
   41|   }
         ^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:45:5

Cannot create record `R` because properties `a` and `b` are missing in record [1] but exist in object type [2].
[incompatible-type]

   expression.js:45:5
   45|   R {}; // ERROR: missing `a` and `b`
           ^^ [1]

References:
   expression.js:38:12
                  v
   38|   record R {
   39|     a: number,
   40|     b: string,
   41|   }
         ^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:54:5

Cannot create record `R` because property `b` is extra in record [1] but missing in object type [2]. Exact objects do
not accept extra props. [incompatible-type]

   expression.js:54:5
   54|   R {a: 1, b: 's'}; // ERROR: extra field `b`
           ^^^^^^^^^^^^^^ [1]

References:
   expression.js:50:12
                  v
   50|   record R {
   51|     a: number,
   52|   }
         ^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:9

Cannot create record `R` because in property `a`: string [1] is incompatible with number [2]. [incompatible-type]

   expression.js:64:9
   64|   R {a: 's', b: 1}; // ERROR: wrong type for `a` and `b`
               ^^^ [1]

References:
   expression.js:60:8
   60|     a: number,
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:64:17

Cannot create record `R` because in property `b`: number [1] is incompatible with string [2]. [incompatible-type]

   expression.js:64:17
   64|   R {a: 's', b: 1}; // ERROR: wrong type for `a` and `b`
                       ^ [1]

References:
   expression.js:61:8
   61|     b: string,
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:65:9

Cannot create record `R` because in property `a`: null [1] is incompatible with number [2]. [incompatible-type]

   expression.js:65:9
   65|   R {a: null, b: 's'}; // ERROR: wrong type for `a`
               ^^^^ [1]

References:
   expression.js:60:8
   60|     a: number,
              ^^^^^^ [2]


Error ------------------------------------------------------------------------------- invalid-declaration-syntax.js:4:14

Record declarations use commas `,` to separate properties. To fix, replace the `;` with `,`. [record-invalid-syntax]

   4|     a: number;
                   ^


Error ------------------------------------------------------------------------------- invalid-declaration-syntax.js:9:25

Record declarations use commas `,` to separate properties. To fix, replace the `;` with `,`. [record-invalid-syntax]

   9|     static a: number = 1;
                              ^


Error ------------------------------------------------------------------------------ invalid-declaration-syntax.js:15:10

Record declarations use commas `,` to separate properties. To fix, replace the `;` with `,`. At [1] [2].
[record-invalid-syntax]

   invalid-declaration-syntax.js:15:10
   15|   record R {
                ^

References:
   invalid-declaration-syntax.js:17:27
   17|     static b: string = 's';
                                 ^ [1]
   invalid-declaration-syntax.js:16:14
   16|     a: number;
                    ^ [2]


Error ------------------------------------------------------------------------------- invalid-declaration-syntax.js:24:5

Record declaration properties are read-only by default, so don't allow variance annotations. Remove to fix.
[record-invalid-syntax]

   24|     +a: number, // ERROR
           ^


Error ------------------------------------------------------------------------------ invalid-declaration-syntax.js:30:10

Record declaration properties are read-only by default, so don't allow variance annotations. Remove to fix. At [1] [2].
[record-invalid-syntax]

   invalid-declaration-syntax.js:30:10
   30|   record R {
                ^

References:
   invalid-declaration-syntax.js:32:12
   32|     static +b: string = 's', // ERROR
                  ^ [1]
   invalid-declaration-syntax.js:31:5
   31|     +a: number, // ERROR
           ^ [2]


Error ------------------------------------------------------------------------------- invalid-declaration-syntax.js:39:6

Record declaration properties can't be optional. Instead, you can specify a default value for the property using
`= <expression>,` after the type annotation. This default value will be used if the property is omitted when creating
the record. To closely mimic the existing behavior of an optional property, you can change `foo?: T,` to
`foo: T | void = undefined,`, though there is likely a better default value you could use instead.
[record-invalid-syntax]

   39|     a?: number, // ERROR
            ^


Error ------------------------------------------------------------------------------ invalid-declaration-syntax.js:45:10

Record declaration properties can't be optional. Instead, you can specify a default value for the property using
`= <expression>,` after the type annotation. This default value will be used if the property is omitted when creating
the record. To closely mimic the existing behavior of an optional property, you can change `foo?: T,` to
`foo: T | void = undefined,`, though there is likely a better default value you could use instead. At [1] [2].
[record-invalid-syntax]

   invalid-declaration-syntax.js:45:10
   45|   record R {
                ^

References:
   invalid-declaration-syntax.js:47:6
   47|     b?: string, // ERROR
            ^ [1]
   invalid-declaration-syntax.js:46:6
   46|     a?: number, // ERROR
            ^ [2]


Error ------------------------------------------------------------------------------ invalid-declaration-syntax.js:53:10

Invalid record declaration syntax:
- Record declaration properties are read-only by default, so don't allow variance annotations. Remove to fix.
At [1] [2].
- Record declaration properties can't be optional. Instead, you can specify a default value for the property using
`= <expression>,` after the type annotation. This default value will be used if the property is omitted when creating
the record. To closely mimic the existing behavior of an optional property, you can change `foo?: T,` to
`foo: T | void = undefined,`, though there is likely a better default value you could use instead. At [3] [4].
- Record declarations use commas `,` to separate properties. To fix, replace the `;` with `,`. At [5] [6].
[record-invalid-syntax]

   invalid-declaration-syntax.js:53:10
   53|   record R {
                ^

References:
   invalid-declaration-syntax.js:55:5
   55|     +b?: string; // ERROR
           ^ [1]
   invalid-declaration-syntax.js:54:5
   54|     +a?: number; // ERROR
           ^ [2]
   invalid-declaration-syntax.js:55:7
   55|     +b?: string; // ERROR
             ^ [3]
   invalid-declaration-syntax.js:54:7
   54|     +a?: number; // ERROR
             ^ [4]
   invalid-declaration-syntax.js:55:16
   55|     +b?: string; // ERROR
                      ^ [5]
   invalid-declaration-syntax.js:54:16
   54|     +a?: number; // ERROR
                      ^ [6]



Found 47 errors
